review fix categories